# AdventOfCode2020

./: .gitignore  .token  Cargo.toml  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  clippy.yml  codecoverage.yml  rust.yml
2020/: Cargo.toml
2020/day01/: Cargo.toml
2020/day01/src/: main.rs
2020/day02/: Cargo.toml
2020/day02/src/: main.rs
2020/day03/: Cargo.toml
2020/day03/src/: lib.rs  main.rs
2020/day04/src/: main.rs
2020/day05/src/: lib.rs  main.rs
2020/day06/: Cargo.toml
2020/day08/src/: lib.rs
2020/legacy/day02/src/: main.rs
2020/legacy/day04/: Cargo.toml
2020/legacy/day04/src/: lib.rs
2020/legacy/day05/src/: lib.rs
2020/legacy/day09/: Cargo.toml
2020/src/: day25.rs  template.rs
2022/: Cargo.toml
2022/src/: day1.rs  lib.rs
benches/: benches.rs
legacy/day04/: Cargo.toml
legacy/day05/: Cargo.toml
legacy/day06/src/: lib.rs
legacy/day07/: Cargo.toml
legacy/day07/src/: lib.rs
legacy/day08/: Cargo.toml
legacy/day08/src/: lib.rs
legacy/day09/src/: lib.rs
legacy/day10/: Cargo.toml
src/: day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day18.rs  day20.rs  day8.rs  lib.rs  main.rs
